Fix: spacing
- Removed top margin from <h1 class="page-header"> elements within the post
  body. This was throwing off the margin which adds whitespace between the main
  content and the site masthead
- Reduced the text size of the blogroll

--- a/assets/stylesheets/stylesheet.scss
+++ b/assets/stylesheets/stylesheet.scss
@@ -70,7 +70,9 @@ h6 {
 		font-size: 1.3em;
 		line-height: 1.5;
 	}
-
+	.page-header {
+		margin-top: auto;
+	}
 }
 
 .blog-masthead {
